<resources>
    <string name="app_name">Google AdMob Module</string>
    <string name="app_description">A sample application is able to serve all general requirements</string>
    <string name="notification_description">This is a sample for notification description</string>
    <string name="lockscreen_description">This is a sample for lockscreen notification description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_action_can_contain_ads">This action can contain advertisements</string>
    <string name="start">Start</string>
    <string name="ad">Ad</string>
    <string name="image">Image</string>
    <string name="dummy_title">Lorem Ipsum</string>
    <string name="install">Install</string>
    <string name="dummy_content">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit…</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="dashboard">Dashboard</string>
    <string name="open_banner_samples">Open Banner Samples</string>
    <string name="open_native_samples">Open Native Samples</string>
    <string name="refresh">refresh</string>
    <string name="button">Button</string>
    <string name="let_s_go">Let\'s Go !</string>
    <string name="ok">OK</string>
    <string name="no_thanks">No, thanks</string>
    <string name="icon">Icon</string>
    <string name="thank_you_and_many_blessings_to_you">Thank you &amp; many blessings to you</string>
    <string name="permission_required">Permission required</string>
    <string name="permission_required_content_1">To help you track your health effectively. App needs this permission to work correctly. To continue:
        \n • <b>Select OK</b>
        \n • <b>Choose Permissions</b>
        \n • <b>Allow notifications</b>
        \n • <b>Return app and enjoy!</b>
    </string>
    <string name="permission_required_content_2">This permission is necessary for the application works perfectly. To continue:
        \n • <b>Select OK</b>
        \n • <b>Choose Permissions</b>
        \n • <b>Allow notifications</b>
        \n • <b>Return app and enjoy!</b>
    </string>
    <string name="tap_for_more_detail">Tap for more detail</string>
    <string name="qoute_1_short">Trí tuệ con người trưởng thành trong học tập</string>
    <string name="qoute_1_full">Trí tuệ con người trưởng thành trong học tập\nNhân cách con người hình thành trong bão tố</string>
    <string name="qoute_2_short">Đồng tiền luôn phát ra âm thanh. Nhưng tờ tiền thì im lặng</string>
    <string name="qoute_2_full">Đồng tiền luôn phát ra âm thanh. Nhưng tờ tiền thì im lặng. Vì vậy, khi giá trị của bạn tăng lên, thì hãy luôn luôn giữ yên lặng.</string>
    <string name="qoute_3_short">Dục tốc bất đạt.</string>
    <string name="qoute_3_full">Dục tốc bất đạt.</string>
    <string name="qoute_4_short">Tôi chỉ chiến đấu vì cái tôi yêu. Chỉ yêu những gì mà tôi tôn trọng</string>
    <string name="qoute_4_full">Tôi chỉ chiến đấu vì cái tôi yêu. Chỉ yêu những gì mà tôi tôn trọng. Và tôn trọng những gì mà tôi biết</string>
    <string name="qoute_5_short">Đừng đánh giá một người bằng những gì người khác nói về họ</string>
    <string name="qoute_5_full">Đừng đánh giá một người bằng những gì người khác nói về họ</string>
    <string name="qoute_6_short">Nhanh có nghĩa là đi chậm không gián đoạn</string>
    <string name="qoute_6_full">Nhanh có nghĩa là đi chậm không gián đoạn</string>
    <string name="qoute_7_short">Có người đến trong đời ta rồi qua đi mau.</string>
    <string name="qoute_7_full">Có người đến trong đời ta rồi qua đi mau. Có một vài người dừng lại, để lại dấu ấn trong tim ta. Và sau đó ta không bao giống như trước nữa.</string>
    <string name="qoute_8_short">Phải xem xét kỹ trước khi làm \nNhìn trước khi nhảy</string>
    <string name="qoute_8_full">Phải xem xét kỹ trước khi làm \nNhìn trước khi nhảy</string>
    <string name="qoute_9_short">Không cúi đầu, không chùn bước, không đầu hàng</string>
    <string name="qoute_9_full">Không cúi đầu, không chùn bước, không đầu hàng</string>
    <string name="qoute_10_short">Không cần phải chạy vội vã, chỉ cần đi đúng giờ</string>
    <string name="qoute_10_full">Không cần phải chạy vội vã, chỉ cần đi đúng giờ</string>
    <string name="qoute_11_short">Khi nói dối, hãy nói ngắn gọn</string>
    <string name="qoute_11_full">Khi nói dối, hãy nói ngắn gọn</string>
    <string name="qoute_12_short">Những con sông sâu nhất luôn chảy lặng lẽ</string>
    <string name="qoute_12_full">Những con sông sâu nhất luôn chảy lặng lẽ</string>
    <string name="qoute_13_short">Sông sâu tĩnh lặng, lúa chín cúi đầu</string>
    <string name="qoute_13_full">Sông sâu tĩnh lặng, lúa chín cúi đầu \nNước sâu tĩnh lặng, người khôn kiệm lời</string>
    <string name="qoute_14_short">Cái nết đánh chết cái đẹp</string>
    <string name="qoute_14_full">Cái nết đánh chết cái đẹp</string>
    <string name="qoute_15_short">Làm đầy tớ thằng khôn còn hơn làm thầy thằng dại</string>
    <string name="qoute_15_full">Làm đầy tớ thằng khôn còn hơn làm thầy thằng dại</string>
    <string name="qoute_16_short">Bệnh từ miệng vào, hoạ từ miệng ra</string>
    <string name="qoute_16_full">Bệnh từ miệng vào, hoạ từ miệng ra</string>
    <string name="qoute_17_short">Bạn không bao giờ bị đánh bại, cho đến khi bạn tự bỏ cuộc</string>
    <string name="qoute_17_full">Bạn không bao giờ bị đánh bại, cho đến khi bạn tự bỏ cuộc</string>
    <string name="qoute_18_short">Yêu thương cho đi là yêu thương có thể giữ được mãi mãi</string>
    <string name="qoute_18_full">Yêu thương cho đi là yêu thương có thể giữ được mãi mãi</string>
    <string name="qoute_19_short">Ai hiểu được mình sẽ hiểu được cả thế giới</string>
    <string name="qoute_19_full">Ai hiểu được mình sẽ hiểu được cả thế giới</string>
    <string name="qoute_20_short">Sinh sự, sự sinh</string>
    <string name="qoute_20_full">Sinh sự, sự sinh</string>
    <string name="qoute_21_short">Khi nói một người phụ nữ xấu. Bạn sẽ trở thành kẻ thù của họ</string>
    <string name="qoute_21_full">Khi nói một người phụ nữ xấu. Bạn sẽ trở thành kẻ thù của họ</string>
    <string name="qoute_22_short">Thế giới thuộc về những người kiên nhẫn</string>
    <string name="qoute_22_full">Thế giới thuộc về những người kiên nhẫn</string>
    <string name="qoute_23_short">Dốt nát một cách khôn khéo lại là sức mạnh</string>
    <string name="qoute_23_full">Dốt nát một cách khôn khéo lại là sức mạnh – Victor Hugo</string>
    <string name="qoute_24_short">Kẻ dốt nát khẳng định. Người thông minh nghi ngờ. Nhà hiền triết suy nghĩ.</string>
    <string name="qoute_24_full">Kẻ dốt nát khẳng định. Người thông minh nghi ngờ. Nhà hiền triết suy nghĩ. – Aristotle</string>
    <string name="qoute_25_short">Đừng làm một điểm trên vòng tròn, hãy là tâm điểm</string>
    <string name="qoute_25_full">Đừng làm một điểm trên vòng tròn, hãy là tâm điểm. – Luc Miriam</string>
    <string name="qoute_26_short">Cái gì bạn không giữ được trong miệng thì cũng không giữ được ở trong nhà</string>
    <string name="qoute_26_full">Cái gì bạn không giữ được trong miệng thì cũng không giữ được ở trong nhà</string>
    <string name="qoute_27_short">Bộ lông làm đẹp con công, học vấn làm đẹp con người.</string>
    <string name="qoute_27_full">Bộ lông làm đẹp con công, học vấn làm đẹp con người.</string>
    <string name="qoute_28_short">Khi tiền bạc nói ra thì sự thật yên lặng</string>
    <string name="qoute_28_full">Khi tiền bạc nói ra thì sự thật yên lặng</string>
    <string name="qoute_29_short">Nếu tự khoe khoang về cái gì, bạn sẽ thất bại về cái ấy</string>
    <string name="qoute_29_full">Nếu tự khoe khoang về cái gì, bạn sẽ thất bại về cái ấy – Ngạn ngữ Nga</string>
    <string name="qoute_30_short">Một lần khiêm tốn bằng bốn lần tự kiêu</string>
    <string name="qoute_30_full">Một lần khiêm tốn bằng bốn lần tự kiêu</string>
    <string name="qoute_31_short">Im lặng là câu trả lời tốt nhất với giận dữ</string>
    <string name="qoute_31_full">Im lặng là câu trả lời tốt nhất với giận dữ – Ngạn ngữ Đức</string>
    <string name="qoute_32_short">Im lặng là vàng</string>
    <string name="qoute_32_full">Im lặng là vàng</string>
    <string name="qoute_33_short">Ánh sáng đi trước âm thanh, vì thế, con người ta trông có vẻ thông minh cho đến khi ta nghe họ phát biểu</string>
    <string name="qoute_33_full">Ánh sáng đi trước âm thanh, vì thế, con người ta trông có vẻ thông minh cho đến khi ta nghe họ phát biểu</string>
    <string name="qoute_34_short">Bình yên là lúc không sầu cũng không vui</string>
    <string name="qoute_34_full">Bình yên là lúc không sầu cũng không vui</string>
    <string name="qoute_35_short">Cuộc sống là 10% những gì xảy ra với bạn và 90% là cách bạn phản ứng với nó</string>
    <string name="qoute_35_full">Cuộc sống là 10% những gì xảy ra với bạn và 90% là cách bạn phản ứng với nó – Charles R. Swindoll</string>
    <string name="qoute_36_short">Nếu bạn giỏi thứ gì đó, đừng bao giờ làm nó miễn phí</string>
    <string name="qoute_36_full">Nếu bạn giỏi thứ gì đó, đừng bao giờ làm nó miễn phí</string>
    <string name="qoute_37_short">Phụ nữ không có sức hấp dẫn mới cảm thấy đàn ông trăng hoa</string>
    <string name="qoute_37_full">Phụ nữ không có sức hấp dẫn mới cảm thấy đàn ông trăng hoa. Đàn ông không có thực lực mới cảm thấy phụ nữ thực dụng</string>
    <string name="qoute_38_short">Biết chấp nhận thực tế cũng là một loại năng lực</string>
    <string name="qoute_38_full">Biết chấp nhận thực tế cũng là một loại năng lực. Biết hài lòng với những thứ mình có cũng là một loại hạnh phúc</string>
    <string name="qoute_39_short">Hãy sống cuộc sống của loài cỏ dại, nở rất tươi không phải để ai nhìn</string>
    <string name="qoute_39_full">Hãy sống cuộc sống của loài cỏ dại, nở rất tươi không phải để ai nhìn</string>
    <string name="qoute_40_short">Nổi giận là bản năng, khống chế cảm xúc là bản lĩnh</string>
    <string name="qoute_40_full">Nổi giận là bản năng, khống chế cảm xúc là bản lĩnh</string>
    <string name="qoute_41_short">Khi cuộc đời bạn chạm đáy, hãy yên tâm vì chỉ còn một đường là đi lên</string>
    <string name="qoute_41_full">Khi cuộc đời bạn chạm đáy, hãy yên tâm vì chỉ còn một đường là đi lên</string>
    <string name="qoute_42_short">Hai năm học nói, cả đời học lắng nghe</string>
    <string name="qoute_42_full">Hai năm học nói, cả đời học lắng nghe</string>
    <string name="qoute_43_short">Hãy suy nghĩ hết những điều bạn nói nhưng đừng bao giờ nói hết những gì bạn nghĩ</string>
    <string name="qoute_43_full">Hãy suy nghĩ hết những điều bạn nói nhưng đừng bao giờ nói hết những gì bạn nghĩ</string>
    <string name="qoute_44_short">Bạo lực là thủ đoạn sau cùng của kẻ ngu dốt</string>
    <string name="qoute_44_full">Bạo lực là thủ đoạn sau cùng của kẻ ngu dốt</string>
    <string name="qoute_45_short">Nếu bạn không thể thay đổi luật chơi, hãy chơi theo luật một cách xuất sắc nhất</string>
    <string name="qoute_45_full">Nếu bạn không thể thay đổi luật chơi, hãy chơi theo luật một cách xuất sắc nhất</string>
    <string name="qoute_46_short">Trí thông minh bắt đầu từ kinh nghiệm, và kinh nghiệm bắt nguồn từ những lần ngu dốt</string>
    <string name="qoute_46_full">Trí thông minh bắt đầu từ kinh nghiệm, và kinh nghiệm bắt nguồn từ những lần ngu dốt</string>
    <string name="qoute_47_short">May mắn là khi sự chuẩn bị và thời cơ gặp nhau</string>
    <string name="qoute_47_full">May mắn là khi sự chuẩn bị và thời cơ gặp nhau</string>
    <string name="qoute_48_short">Ai chiến thắng không hề chiến bại. Ai nên khôn chẳng dại đôi lần</string>
    <string name="qoute_48_full">Ai chiến thắng không hề chiến bại. Ai nên khôn chẳng dại đôi lần - Tố Hữu</string>
    <string name="qoute_49_short">Người khôn nghĩ rồi mới nói, người ngu đần nói rồi mới nghĩ</string>
</resources>