<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.gms.ads.nativead.NativeAdView
        android:id="@+id/nativeAdView"
        android:layout_width="match_parent"
        android:layout_height="320dip"
        android:background="@drawable/background_ad_container">

        <RelativeLayout
            android:id="@+id/ad_unit_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:padding="8dip">

                    <ImageView
                        android:id="@+id/ad_app_icon"
                        android:layout_width="35dip"
                        android:layout_height="35dip"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/image"
                        android:src="@color/md_theme_light_primary" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/ad_headline"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:textColor="@color/color_advertisement"
                            android:textSize="14sp"
                            android:text="@string/dummy_title"
                            tools:text="@string/dummy_title" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <RatingBar
                                android:id="@+id/ad_stars"
                                style="?android:attr/ratingBarStyleSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:isIndicator="true"
                                android:numStars="5"
                                android:stepSize="0.5" />

                            <TextView
                                android:id="@+id/ad_advertiser"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:ellipsize="end"
                                android:gravity="bottom"
                                android:lines="1"
                                android:textColor="#026FDF"
                                android:textSize="11sp"
                                android:textStyle="bold"
                                android:text="@string/dummy_content"
                                tools:text="@string/dummy_content" />
                        </LinearLayout>


                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/ad_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginVertical="3dp"
                    android:maxLines="3"
                    android:textColor="@android:color/black"
                    android:textSize="11sp"
                    android:text="@string/dummy_title"
                    tools:text="@string/appbar_scrolling_view_behavior" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.gms.ads.nativead.MediaView
                        android:id="@+id/ad_media"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_gravity="center" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/ad_call_to_action"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/background_ad_button"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:text="@string/install"
                        tools:text="@string/install" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_ad_logo"
                android:backgroundTint="@color/md_theme_light_primary"
                android:minWidth="15dp"
                android:minHeight="15dp"
                android:paddingStart="5dp"
                android:paddingEnd="4dp"
                android:text="@string/ad"
                android:textColor="@color/white"
                android:textSize="11sp" />

        </RelativeLayout>


    </com.google.android.gms.ads.nativead.NativeAdView>
</layout>