<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        tools:context=".notification.lockscreen.LockscreenActivity">

        <TextClock
            android:id="@+id/textClock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:paddingTop="80dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/datetimeToday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Mon, May 01"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="normal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="40dp"
            android:background="@drawable/background_lockscreen"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/app_name"
                    android:textColor="@color/md_theme_light_primary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/buttonClose"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/button"
                    android:src="@drawable/ic_close" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:text="@string/dummy_title"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_light"
                android:paddingHorizontal="16dp"
                android:text="@string/dummy_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layoutRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/icon"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:src="@drawable/ic_google" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:text="@string/dummy_title"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/gotoHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/background_lockscreen_button"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/let_s_go"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/layoutListenRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/background_lockscreen_my_recording"
                    android:orientation="horizontal"
                    android:padding="5dp">


                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/icon"
                        android:src="@drawable/ic_google" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingHorizontal="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/quicksand_bold"
                            android:text="@string/dummy_title"
                            android:textColor="@color/black"
                            android:textStyle="bold" />


                        <TextView
                            android:id="@+id/datetimeRecord"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/quicksand_regular"
                            android:text="May 01, 12:15 PM"
                            android:textColor="@color/black"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/gotoRecordList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/background_lockscreen_button"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/let_s_go"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</layout>
